package com.library.observer;

/**
 * OBSERVER PATTERN - Observer interface for notifications
 * Student ID: KU00298794
 */
public interface KU00298794_Observer {
    void update(String message);

    String getObserverId();
}
